--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "foreman": "^2.0.0"
+  },
+  "dependencies": {
+    "ramda": "^0.23.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "tachyons": "^4.7.0"
   }
 }
