Cloudant is working, syntax differences from Couch to clean up

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "foreman": "^2.0.0"
   },
   "dependencies": {
+    "cloudant": "^1.7.1",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
