Changed child page CPC rank to High Score and only top 5.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-crud",
+  "name": "charlestonParksConsevancy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
